# symbol-quick-wallet

./: .gitignore  AGENTS.md  FEATURES.md  HANDOVER.md  ISSUES.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  auto-dev.sh  pyproject.toml
.github/workflows/: publish-pypi.yml  release-main.yml
auto-dev/: README.md  package-lock.json  package.json  tsconfig.json
auto-dev/src/: index.ts  task-manager.ts
docs/memory/: 2026-02-28.md  2026-03-01.md  2026-03-04.md  2026-03-05.md  2026-03-06.md  2026-03-07.md  README.md
scripts/: set_live_test_key.py  setup_test_key.py
src/: __init__.py  __main__.py  connection_state.py  network.py  screens.py  styles.py  transaction.py  transaction_template.py  wallet.py
src/features/: __init__.py
src/features/account/: __init__.py  handlers.py  screens.py  service.py
src/features/address_book/: __init__.py  handlers.py  screen.py  service.py
src/features/aggregate/: __init__.py  handlers.py  screen.py  service.py
src/features/lock/: __init__.py  handlers.py  screen.py  service.py
src/features/metadata/: __init__.py  handlers.py  screen.py  service.py
src/features/monitoring/: __init__.py  service.py
src/features/mosaic/: __init__.py  handlers.py  screen.py  service.py
src/features/multisig/: __init__.py  handlers.py  screen.py  service.py
src/features/namespace/: __init__.py  handlers.py  screen.py  service.py  validators.py
src/features/transfer/: __init__.py  handlers.py  screen.py  service.py  validators.py
src/shared/: __init__.py  clipboard.py  connection_state.py  logging.py  network.py  protocols.py  qr_scanner.py  transaction_queue.py  transaction_template.py  validation.py
tests/: README.md  conftest.py  live_test_key.py  test_clipboard.py  test_comprehensive_coverage.py  test_integration_network.py  test_integration_wallet.py  test_multi_account.py  test_network_timeout.py  test_password_authentication.py  test_symbol_features.py  test_transaction_template.py  test_validation.py  test_wallet.py  test_wallet_module.py
tests/features/: __init__.py
tests/features/account/: test_authentication.py  test_crypto_basics.py  test_encryption.py  test_integration.py  test_multi_account.py  test_storage.py  test_wallet_core.py
tests/features/address_book/: __init__.py  test_address_book.py  test_integration.py
tests/features/lock/: __init__.py  (+1 more)
tests/shared/: test_integration_network.py  test_network.py  test_qr_scanner.py  test_transaction_template.py  test_validation.py
(+18 files in other folders)
