[project]
name = "symbol-quick-wallet"
version = "0.6.1"
description = "A simple TUI-based cryptocurrency wallet for Symbol blockchain (NIS1/Symbol network)"
readme = "README.md"
requires-python = ">=3.9.2,<4.0.0"
license = "MIT"
authors = [
    {name = "Symbol Quick Wallet Contributors"}
]
maintainers = [
    {name = "Symbol Quick Wallet Contributors"}
]
keywords = [
    "symbol",
    "blockchain",
    "cryptocurrency",
    "wallet",
    "tui",
    "terminal",
    "xym",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Security :: Cryptography",
    "Topic :: Terminals",
]
 dependencies = [
    "qrcode[pil]>=8.2.0",
    "requests>=2.28.0",
    "symbol-sdk-python>=3.3.0",
    "textual>=0.46.0",
    "cryptography>=46.0.0",
    "pyperclip>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/symbol-quick-wallet"
Documentation = "https://github.com/yourusername/symbol-quick-wallet#readme"
Repository = "https://github.com/yourusername/symbol-quick-wallet"
Issues = "https://github.com/yourusername/symbol-quick-wallet/issues"

[project.scripts]
symbol-quick-wallet = "src.__main__:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]


[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
